k8s/middlewares/tiime-redirect/templates/sign-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      set $condition "${uri}-${arg_env}";
      if ($condition ~* "^/contrats-dev") {
        return 301 $scheme://master.sign.development.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-green") {
        return 301 $scheme://master.sign.green.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-purple") {
        return 301 $scheme://master.sign.purple.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-grey") {
        return 301 $scheme://master.sign.grey.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-lavender") {
        return 301 $scheme://master.sign.lavender.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-orange") {
        return 301 $scheme://master.sign.orange.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-cerfrance") {
        return 301 $scheme://master.sign.cerfrance.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-school") {
        return 301 $scheme://master.sign.school.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-leafy") {
        return 301 $scheme://master.sign.leafy.preprod.tiime.tech/opportunity$is_args$args;
      }
      if ($condition ~* "^/contrats-") {
        return 301 $scheme://sign-v2.tiime.fr/opportunity$is_args$args;
      }
      if ($request_uri !~* ^/.well-known) {
        return 301 $scheme://signature-facile.fr$request_uri;
      }
  name: sign-tiime-fr-redirect
spec:
  tls:
  - hosts:
    - "sign.tiime.fr"
    secretName: sign-tiime-fr-tls
  rules:
  - host: "sign.tiime.fr"
